--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hola amiges, qué divertido lo que sea</h1>
+        <h1>Hola amiges, qué divertido lo que sea!!</h1>
         <img src="https://static.platzi.com/cdn-cgi/image/width=1024,quality=35,format=auto/media/avatars/avatars/sarajotabe_912a4515-7a2b-4fae-9280-e3ab45293c0d.jpg" alt="">
+        <h3>Ejemlpos de alerta en VS code</h3>
+            <strong>Exito</strong> Representa el exito de una posible accion <br>
+            Hola
+            mundo
     </body>
 </html>
